# Parallel-Computing

./: .gitignore  CMakeLists.txt  README.md
Assignment02/: Assignment02.cpp
Project01/: Relax.h  RelaxOptimized.c
Project01/Evaluation/: relaxMPI.csv
Project01/evaluation/: evaluation.ipynb
Project02/: Simple.c  Square.c
Project03/: Project03.cpp  Relax.cpp  RelaxMPI.cpp  Shared.h  Util.h
Project03/Evaluation/: Evaluation.ipynb  evaluation.ipynb  mpi.csv  mpi1.csv  mpi4.csv  relax.csv
Project03/Evaluation/Data/: relax.csv
evaluation/: MPI.csv  evaluation.ipynb  relax.csv  relaxMPI.csv  relaxOpenMP.csv  relaxOptimized.csv
project02/: CMakeLists.txt  relax.c  simple.c  simple.h  square.c
project02/include/: simple.h
project02/src/: simple.c  square.c
src/: MPI.c  assignment01.c  assignment01.h  common.h  main.c  relax.c  relax.h  relaxMPI.c  relaxOpenMP.c  relaxOptimized.c
